# calculator_agent_rl

./: .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
.devcontainer/: devcontainer.json
datasets/: calculator_train.csv
src/: train.py
src/environment/: calculator_env.py
src/environment/tools/: calculator.py
src/inference/: calculator_system_message.md
src/model_exec/: claude.py  model_executor.py
src/rewards/: calculator_reward_func.py  exec_judge.py  judge_resp.py  judge_yaml_response_parser.py  tool_judge.md
src/rewards/verifiers/: answer_verifier.py
tests/: test_answer_verifier.py  test_calculator.py
